--- a/js/index.html
+++ b/js/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<p>Hello worl!</p>
+<p>Hello world!</p>
 
     <script src ="js/script.js"></script> 
 </body>
